<resources>
    //activity_main
    <string name="app_name">DibApp</string>
    <string name="Registrazioni">Registrazione Utente</string>
    <string name="Email">Inserire Email</string>
    <string name="Password">Enter Email</string>
    <string name="Registrazione">Registrati</string>
    <string name="singup">Hai già un account? Accedi da qui</string>
    <string name="Cambialingua">Cambia lingua</string>

    //activity_login
    <string name="Login">Login utente</string>
    <string name="Login1">Entra</string>
    <string name="Account">Non hai un account? Registrati qui</string>
    <string name="ErrorData">Errore, dati non corretti!</string>
    <string name="LoggingMsg">Accesso in corso...</string>


    //CommentsActivity
    <string name="Commenti">Commenti :</string>
    <string name="Utenti">Utenti :</string>
    <string name="Valuta">Valuta :</string>
    <string name="AvvisoCommenti">Inserisci commento :</string>
    <string name="CommentiVuoti">Nessun commento per questa lezione</string>
    <string name="ErrorCommPost">Errore nell\'invio del commento</string>

    //bottom_navigation
    <string name="Home">Pagina iniziale</string>
    <string name="Corsi">Corsi</string>
    <string name="Orari">Orari</string>
    <string name="Cerca">Cerca</string>

    //main_menu
    <string name="Logut">Esci dal profilo</string>

    //activity_lessons
    <string name="Lista">"Lista delle lezioni di: "</string>

    //activity_rating
    <string name="Submit">Sottoscrivi</string>

    //fragment_home
    <string name="StartLesson">Segui Lezione </string>
    <string name="CreateLessons">Crea lezione</string>
    <string name="Conferma">Vuoi veramente creare una nuona lezione?</string>
    <string name="QR">Copia il codice per il QR</string>
    <string name="TestoCopiato">Testo Copiato!</string>
    <string name="TestoAggiunto">Lezione Aggiunta!</string>

    //fragment_favorites
    <string name="ITPS">Lista dei corsi di ITPS</string>
    <string name="ITPS2">Orari dei corsi di ITPS</string>

    //Homefragment
    <string name="Benvenuto">Benvenuto</string>

    //LessonsActivity
    <string name="NoLessons">Nessuna lezione per questo corso</string>

    //LessonsRecyclearAdapter
    <string name="CancellaLezione">Cancella lezione</string>
    <string name="ConfermaCancellaLezione">Vuoi eliminare questa lezione?</string>

    //Courses_list_item
    <string name="NomeCorso">Nome Corso</string>

    //RatingAcitivity
    <string name="Valutazione">"Il tuo voto è: "</string>
    <string name="Voto">Grazie per aver votato</string>
    <string name="ErrorRatePost">Errore inserimento voto</string>

    //Logging
    <string name="InserisciPassword">Inserisci Password</string>
    <string name="Inserisci">Inserisci Email</string>
    <string name="Logging">Accesso in corso...</string>



    //LessonRecyclerAdapter
    <string name="Errore">Errore</string>
    <string name="Insegnantenonautorizzato">Errore, insegnante non autorizzato</string>
    <string name="LezioneRimossa">Lezione rimossa</string>

    //MainActivity
    <string name="InserisciEmail1">Inserisci Email</string>
    <string name="InserisciPass1">Inserisci Password</string>
    <string name="Registrazione1">Registrazione, attendere prego...</string>
    <string name="RegitrazioneErrore">Errore nella registrazione</string>

    //PostQr
    <string name="Qr">Nessun dato di scansione ricevuto!</string>



</resources>









